syntax = "proto3";

package role;

message Id {
  string id = 1;
}

message RoleName {
	string name = 1;
}

message Role {
	Id id = 1;
	string name = 2;
}

message RoleList {
	repeated Role roles = 1;
}

service RoleService {
	rpc GetRoles() returns (RoleList) {}
	rpc GetRole(Id) returns (Role) {}
	rpc CreateRole(RoleName) returns (Role) {}
	rpc UpdateRole(Role) returns (Role) {}
	rpc DeleteRole(Id) returns (Role) {}
}